Improve serial-number search: return user to original page on no results
- Pass current URL as “next” hidden field in header search form
- In equipment_search view, read “next” (fallback to HTTP_REFERER or station_list) to determine return destination
- Update search_not_found template to link back using next_url instead of a fixed station_list

--- a/templates/equipment/search_not_found.html
+++ b/templates/equipment/search_not_found.html
@@ -7,6 +7,6 @@
     Výbava so sériovým číslom <strong>{{ query }}</strong> nebola nájdená.
   </h2>
   <div style="text-align:center;">
-    <a href="{% url 'station_list' %}" class="button">Späť na zoznam staníc</a>
+    <a href="{{ next_url }}" class="button">Späť</a>
   </div>
 {% endblock %}
